# ads-b-flightradar-rtl-sdr

./: .gitignore  README.md  docker-compose.yml
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js  map.js  sdr-status.js  websocket.js
k8s/: configmap.yaml  namespace.yaml  secret.yaml
k8s/grpc-gateway/: deployment.yaml  service.yaml
k8s/timescaledb/: init-configmap.yaml  service.yaml  statefulset.yaml
proto/: adsb.proto
scripts/: build-all.sh  deploy.ps1  deploy.sh
services/adsb-capture/: Cargo.toml  build.bat  build.rs  run.bat
services/adsb-capture/src/: aircraft_tracker.rs  config.rs  main.rs
services/adsb-capture/src/adsb/: cpr.rs  crc.rs  mod.rs  parser.rs  types.rs
services/adsb-capture/src/decoder/: mod.rs  runner.rs
services/adsb-capture/src/device/: manager.rs  mod.rs  state.rs
services/adsb-capture/src/grpc/: client.rs  mod.rs
services/adsb-capture/src/sdr/: capture.rs  demod.rs  detect.rs  mod.rs
services/grpc-gateway/: Cargo.toml  Dockerfile  build.rs
services/grpc-gateway/src/: db_writer.rs  grpc_server.rs  main.rs  ws_handler.rs
services/timescaledb/: init.sql
services/timescaledb/migrations/: 001_add_device_id.sql
